--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "style-loader": "^0.12.4",
     "through2": "^2.0.0",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "rx": "^3.1.2"
   }
 }
