--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "faucet": "0.0.1",
+    "file-loader": "^0.8.4",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jscs": "^2.1.1",
     "jscs-loader": "^0.2.0",
