--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.2.0",
   "description": "ES6 Development Facility",
   "scripts": {
+    "start": "npm run node-server & npm run serve",
     "test": "karma start",
-    "serve": "webpack -dw & npm test | ./reporter-filter"
+    "serve": "webpack -dw & npm test | ./reporter-filter",
+    "node-server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -63,6 +65,7 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "rx": "^3.1.2"
   }
 }
